@@ -788,6 +788,7 @@ Other memory:
 	* Began adding support for the Zilog Z16F using the Zilog
 	  Z16F2800100ZCOG Development Kit.
 	* Add support toolchains that do not support making of dependencies
+	* Fix Cygwin build with spaces in directory names
 </pre></ul>
 
 <table width ="100%">
